--- a/index.html
+++ b/index.html
@@ -38,31 +38,40 @@
 
             <!-- Main Timer-->
             <div class="container timer">
-                <div class="row">
+                <div class="timerBtns">
+                    <button class="innerTimer" onclick="reset()">Study Timer</button>
+                    <button class="innerTimer">Short Break</button>
+                    <button class="innerTimer">Long Break</button>
+                </div>
+                <div class="row" >
                     <div class="col-5">
                         <h4 id="minutes"></h4>
                     </div>
                     <div class="col-2">
-                        <h4>:</h4>
+                        <h4 id="colon">:</h4>
                     </div>
                     <div class="col-5">
                         <h4 id="seconds"></h4>
                     </div>
                 </div>
             </div>
-            
-            <div>
-                <h3 id="done" class="text-center my-5"></h3>
-            </div>
 
             <!-- Start and Reset Button -->
             <div class="container d-flex justify-content-center align-items-center my-5">
-                <button class="btn" onclick="start()">
-                    <i class="fas fa-play fa-2x"></i>
+                <button id="start" class="btn" onclick="start()">
+                    <!-- <i class="fas fa-play fa-2x"></i> -->
+                    START
                 </button>
-                <a href="index.html">
-                    <i class="fas fa-redo-alt fa-2x"></i>
-                </a>
+                <button id="reset" class="btn" style="display: none;" onclick="reset()">
+                    <!-- <a href="index.html" > -->
+                        <!-- <i class="fas fa-redo-alt fa-2x"></i> -->
+                         RESET
+                    <!-- </a> -->
+                </button>
+            </div>
+            
+            <div>
+                <h3 id="done" class="text-center my-5"></h3>
             </div>
         </div>
     </body>
