added long break functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Font Awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
 
     <!-- Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
@@ -55,6 +55,17 @@
                         <h4 id="seconds"></h4>
                     </div>
                 </div>
+            </div>
+
+            <!-- Session details-->
+            <div class="sessionDetails">
+                <h4 id="sessionDetails">
+                    Session 1: Time to Study!
+                    <i class="fa-solid fa-rotate-right refresh"></i>
+                </h4>
+                <!-- <button class="refresh" onclick="resetPomodoro()">
+                    <i class="fas fa-rotate-right"></i>
+                  </button> -->
             </div>
 
             <!-- Start and Reset Button -->
