Correction in timer functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
     rel="stylesheet"/>
 
+    <!-- Default Favicon -->
+    <link id="favicon" rel="icon" href="./favicons/red.png" type="image/jpeg">
+
     <title>Pomodoro App</title>
     </head>
 
