--- a/index.html
+++ b/index.html
@@ -88,5 +88,47 @@
                 <h3 id="done" class="text-center my-5"></h3>
             </div>
         </div>
+        <!-- Report Button -->
+        <div class="text-center my-5">
+            <button class="btn" data-toggle="modal" data-target="#activitySummaryModal">
+                View Report
+            </button>
+        </div>
+
+        <!-- Modal for Activity Summary -->
+        <div class="modal fade" id="activitySummaryModal" tabindex="-1" role="dialog" aria-labelledby="activitySummaryModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="activitySummaryModalLabel">Activity Summary</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="summary-stats">
+                            <div class="stat">
+                                <i class="fas fa-hourglass-half"></i>
+                                <h3 id="hoursFocused"></h3>
+                                <p>hours focused</p>
+                            </div>
+                            <div class="stat">
+                                <i class="fas fa-calendar-day"></i>
+                                <h3 id="daysAccessed"></h3>
+                                <p>days accessed</p>
+                            </div>
+                            <div class="stat">
+                                <i class="fas fa-fire"></i>
+                                <h3 id="dayStreak">0</h3>
+                                <p>day streak</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
