--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
 
     <body onload="template()">
         <div class="container">
-            <!-- Heading -->
-            <h1 class="text-center my-5 heading">POMODORO APP</h1>
+            <div class="header">
+                <!-- Heading -->
+                <h2 class="my-5 heading">POMODORO APP</h2>
+                <!-- Report Button -->
+                <button class="btn reportBtn" id="reportBtn" data-toggle="modal" data-target="#activitySummaryModal">
+                    Report
+                </button>
+            </div>
 
             <!-- Main Timer-->
 
@@ -66,12 +72,6 @@
                     Session 1: Time to Study!
                     
                 </h4>
-                <!-- <a href="index.html" >
-                    <i class="fa-solid fa-rotate-right refresh"></i>
-                </a> -->
-                <!-- <button href="index.html">
-                    <i class="fa-solid fa-rotate-right refresh"></i>
-                  </button> -->
             </div>
 
             <!-- Start and Reset Button -->
@@ -87,12 +87,6 @@
             <div>
                 <h3 id="done" class="text-center my-5"></h3>
             </div>
-        </div>
-        <!-- Report Button -->
-        <div class="text-center my-5">
-            <button class="btn" data-toggle="modal" data-target="#activitySummaryModal">
-                View Report
-            </button>
         </div>
 
         <!-- Modal for Activity Summary -->
@@ -123,9 +117,6 @@
                                 <p>day streak</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
