--- a/login.html
+++ b/login.html
@@ -55,6 +55,10 @@
         </div>
         <button class="btn btn-primary" onclick="login()">Login</button>
         <p id="error-message" class="error-message">Invalid username or password</p>
+        <h6>
+            Do not have an account? 
+            <a href="signup.html">Sign up</a>
+        </h6>
     </div>
 
     <!-- Bootstrap JS -->
