--- a/signup.html
+++ b/signup.html
@@ -56,6 +56,11 @@
         </div>
         <button class="btn btn-primary" onclick="signUp()">Sign Up</button>
         <p id="error-message" class="error-message">Sign-up failed, please try again</p>
+        <div>
+        <h6>
+            Already have an account? 
+            <a href="login.html">Login</a>
+        </h6>
     </div>
 
     <!-- Bootstrap JS -->
