Logout button addition

--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
                 <!-- Heading -->
                 <h2 class="my-5 heading">POMODORO APP</h2>
                 <!-- Report Button -->
-                <button class="btn reportBtn" onclick="fetchActivitySummary()" id="reportBtn" data-toggle="modal" data-target="#activitySummaryModal">
-                    Report
-                </button>
+                <div>
+                    <button class="btn reportBtn" onclick="fetchActivitySummary()" id="reportBtn" data-toggle="modal" data-target="#activitySummaryModal">
+                        Report
+                    </button>
+                    <button class="btn logoutBtn" href="login.html" id="logoutBtn">
+                        <a href="login.html">Logout</a>
+                    </button>
+                </div>
             </div>
 
             <!-- Main Timer-->
