--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         </h1>
     </div>
     <div class="login-container">
-        <h3>Pomodoro App Login</h3>
+        <h3>Login</h3>
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" class="form-control" placeholder="Enter username">
