--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
         </h1>
     </div>
     <div class="signup-container">
-        <h3>Pomodoro App - Sign Up</h3>
+        <h3>Sign Up</h3>
         <div class="form-group">
             <label for="email">Email:</label>
             <input type="email" id="email" class="form-control" placeholder="Enter email">
