--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             <!-- Session details-->
             <div class="sessionDetails">
                 <h4 id="sessionDetails">
-                    Session 1: Time to Study!
-                    
+                    Time to Study! 
                 </h4>
             </div>
 
