--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <span>:</span>
                                     <span id="minutesFocused"></span>
                                 </div>                                
-                                <p>hours focused</p>
+                                <p>time focused today</p>
                             </div>
                             <div class="stat">
                                 <i class="fas fa-calendar-day"></i>
